k8s/perplexica/resources/web-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app.kubernetes.io/component: web
  ports:
    - name: api
      port: 80
      targetPort: api
    - name: ui
      port: 8080
      targetPort: ui
